# reminder-bot

./: .env  Cargo.toml  LICENSE  config.toml  readme.org  reminder-bot.rc
migrations/2021-02-09-035332_create_reminders/: down.sql  up.sql
migrations/2021-02-18-031654_create_trusted_chats/: down.sql  up.sql
src/: config.rs  logging.rs  main.rs
src/bot/: message.rs  mod.rs
src/controller/: mod.rs
src/controller/action/: mod.rs
src/controller/action/parser/: mod.rs  tests.rs
src/db/: mod.rs  schema.rs  types.rs
src/db/models/: mod.rs  reminders.rs  trusted_chats.rs
src/logging/: filter_logger.rs  mod.rs
