[package]
name = "reminder-bot"
version = "0.1.0"
authors = ["gahag <gabriel.s.b@live.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

# simple_logger = "1"
log = "0.4"
filter_logger = { path = "./filter_logger" }

chrono = "0.4"
fastrand = "1.4"

serde = "1"
toml = "0.5"

combine = { version = "4", default-features = false, features = ["std"] }

diesel = { version = "1.4", features = ["sqlite"] }

tokio = { version = "1", features = ["rt", "macros", "time", "signal"] }
futures = "0.3"

# We need to use rustls because cross fails to link openssl properly.
# telegram-bot = { version = "0.9", default-features = false, features = ["rustls"] }
[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
branch = "master"
default-features = false
features = ["rustls"]
